# swagger/swagger.yml
@@ -343,26 +343,23 @@ paths:
           description: '{string} success'
         "403":
           description: is empty
-  /request/{request_id}/accepted-offer:
-    delete:
+  /request/{request_id}/available-teacher:
+    get:
       tags:
       - request
-      description: delete the object
-      operationId: RequestController.Delete
+      description: get all objects
+      operationId: RequestController.GetAvailableTeacher
       parameters:
-      - in: header
-        name: token
-        description: The token
-        required: true
-        type: string
       - in: path
         name: request_id
-        description: the request_id
+        description: request id
         required: true
         type: string
       responses:
         "200":
-          description: '{string} success'
+          description: ""
+          schema:
+            $ref: '#/definitions/responses.Teacher'
         "403":
           description: is empty
   /request/{request_id}/offer:
@@ -473,6 +470,10 @@ paths:
         name: subject
         description: subject
         type: string
+      - in: query
+        name: method
+        description: method
+        type: string
       responses:
         "200":
           description: ""
@@ -519,6 +520,10 @@ paths:
       - in: query
         name: subject
         description: subject
+        type: string
+      - in: query
+        name: method
+        description: method
         type: string
       responses:
         "200":
@@ -923,6 +928,8 @@ definitions:
         format: int64
       description:
         type: string
+      email:
+        type: string
       gender:
         type: string
       graduation:
@@ -1149,6 +1156,8 @@ definitions:
         format: int64
       description:
         type: string
+      email:
+        type: string
       gender:
         type: string
       graduation:
@@ -1188,6 +1197,8 @@ definitions:
         type: integer
         format: int64
       description:
+        type: string
+      email:
         type: string
       gender:
         type: string
@@ -1285,6 +1296,8 @@ definitions:
         type: integer
         format: int64
       description:
+        type: string
+      email:
         type: string
       fri_afternoon:
         type: boolean
